--- a/module1/rag-intro1.ipynb
+++ b/module1/rag-intro1.ipynb
@@ -10,31 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "787780a0-a654-4dd6-8e98-2c72640590e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/miguelarquezabdala/abdala9512/llm-zoomcamp2025/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
+    "\n",
+    "import json\n",
     "from openai import OpenAI\n",
     "from dotenv import load_dotenv\n",
     "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.prompts import ChatPromptTemplate"
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "6ad2a5b9-eea7-4cbe-a69f-6ab299896cd1",
    "metadata": {},
    "outputs": [
@@ -44,7 +38,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,6 +287,7 @@
     "        }\n",
     "    \n",
     "        response = es_client.search(index=index_name, body=search_query)\n",
+    "        \n",
     "        \n",
     "        result_docs = []\n",
     "        \n",
