--- a/module1/semantic_search.ipynb
+++ b/module1/semantic_search.ipynb
@@ -2,25 +2,150 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eab94fc3-0458-490d-801d-52f5904b996b",
+   "id": "676adfa9-7748-417f-a5e7-9023d36f394a",
    "metadata": {},
    "source": [
-    "# Semantic Search"
+    "# RAG - Semantic Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d1d66ceb-3b7c-4923-a2ea-cd118a1e4f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/miguelarquezabdala/repos/llm-zoomcamp2025/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "\n",
+    "import json\n",
+    "from openai import OpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_community.document_loaders import WebBaseLoader\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "045953a7-3d4e-4a54-8fbf-c177149a8d9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e461d06-8ad4-4a4d-bf60-fe14293c2cd8",
+   "metadata": {},
+   "source": [
+    "# 1. Embedding Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ab135388-3300-4536-bbf7-d5d5b5d228fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/miguelarquezabdala/repos/llm-zoomcamp2025/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "model = SentenceTransformer(\"all-mpnet-base-v2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "658199f1-def0-4c98-9c05-0e9138316c07",
+   "metadata": {},
+   "source": [
+    "# 1. JSON Web data loader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "a42898f6-2ba6-4b3b-8ab6-e0fb036eeaf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DOCUMENTS_URL = \"https://raw.githubusercontent.com/DataTalksClub/llm-zoomcamp/refs/heads/main/01-intro/documents.json\"\n",
+    "loader = WebBaseLoader(DOCUMENTS_URL)\n",
+    "\n",
+    "docs = loader.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f3e13151-88f9-4195-9039-f929d17178f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "_docs = json.loads(docs[0].page_content)\n",
+    "documents = []\n",
+    "\n",
+    "for txt in _docs:\n",
+    "    for doc in txt['documents']:\n",
+    "        doc['course'] = txt['course']\n",
+    "        doc[\"text_embedding\"] = model.encode(doc[\"text\"]).tolist()\n",
+    "        documents.append(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eab94fc3-0458-490d-801d-52f5904b996b",
+   "metadata": {},
+   "source": [
+    "# Index documents in Elastic Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "32b0f35e-a0f2-4a0e-88c9-eb08d23248d6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'name': '66e0f9f00ace', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'FJ0AMI9NSC-2-hfgszITsg', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+       "ObjectApiResponse({'name': '628c37060246', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'uhL8fz6vRcmsRJgIZ4b9Lg', 'version': {'number': '8.4.3', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '42f05b9372a9a4a470db3b52817899b99a76ee73', 'build_date': '2022-10-04T07:17:24.662462378Z', 'build_snapshot': False, 'lucene_version': '9.3.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,56 +160,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ae216778-cecf-4f9a-b530-5da151b45ea7",
-   "metadata": {},
-   "source": [
-    "# Embeddings"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "647062c8-2dec-401a-9dc6-0cd96243ba39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "\n",
-    "model = SentenceTransformer(\"all-mpnet-base-v2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "6b862c12-3067-41e3-a9fc-9ee030021077",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [51:15<00:00, 1025.10s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "with open(\"./documents.json\") as f_in:\n",
-    "    docs_raw = json.load(f_in)\n",
-    "\n",
-    "documents = []\n",
-    "\n",
-    "for course_dict in tqdm(docs_raw):\n",
-    "    for doc in course_dict['documents']:\n",
-    "        doc['course'] = course_dict['course']\n",
-    "        doc[\"text_embedding\"] = model.encode(doc[\"text\"]).tolist()\n",
-    "        documents.append(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "fc4c79ef-427e-4c68-b57f-80863e456505",
    "metadata": {},
    "outputs": [
@@ -94,7 +171,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'course-questions'})"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "c43cc8a8-48d6-4cd7-a286-3bae6f2ae947",
    "metadata": {},
    "outputs": [
@@ -131,7 +208,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 948/948 [17:26<00:00,  1.10s/it]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 918/918 [00:03<00:00, 234.51it/s]\n"
      ]
     }
    ],
@@ -268,9 +345,166 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aabee10c-23e5-493a-9bee-d8ee2efb7f06",
+   "metadata": {},
+   "source": [
+    "# RAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "9096ab65-c00f-4bdf-a155-f499b352f937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from elasticsearch import Elasticsearch\n",
+    "\n",
+    "\n",
+    "INDEX_NAME = \"course-questions\"\n",
+    "\n",
+    "class SemanticSearchRAG:\n",
+    "\n",
+    "    def __init__(self, llm, ss_embedding_model, template: str) -> None:\n",
+    "        self.model = llm\n",
+    "        self.embedding_model = ss_embedding_model\n",
+    "        self.es_client = Elasticsearch(\"http://localhost:9200\")\n",
+    "        self.prompt = template\n",
+    "\n",
+    "    def encode(self, search_term: str):\n",
+    "        \n",
+    "        vec_search_term = self.embedding_model.encode(search_term)\n",
+    "        return vec_search_term\n",
+    "\n",
+    "    def elastic_search(self, query: str):\n",
+    "\n",
+    "        search_query = {\n",
+    "            \"field\": \"text_embedding\",\n",
+    "            \"query_vector\": self.encode(query),\n",
+    "            \"k\": 5,\n",
+    "            \"num_candidates\": 10000,\n",
+    "        }\n",
+    "\n",
+    "        response = self.es_client.search(\n",
+    "            query={\n",
+    "                \"match\": {\n",
+    "                    \"course\": \"data-engineering-zoomcamp\"\n",
+    "                }\n",
+    "            },\n",
+    "            index=INDEX_NAME, knn=search_query, \n",
+    "            source=[\"text\", \"section\", \"course\", \"question\"]\n",
+    "        )        \n",
+    "        result_docs = []\n",
+    "        \n",
+    "        for hit in response['hits']['hits']:\n",
+    "            result_docs.append(hit['_source'])\n",
+    "        \n",
+    "        return result_docs\n",
+    "\n",
+    "    def query(self, question: str):\n",
+    "        search_results = self.elastic_search(question)\n",
+    "        chain = self.prompt | self.model\n",
+    "        response = chain.invoke(\n",
+    "            {\n",
+    "                \"context\": search_results, # elasticsearch \n",
+    "                \"question\": question,\n",
+    "            }\n",
+    "        )\n",
+    "        # print(search_results)\n",
+    "        return response.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e82ecaee-b3c4-4098-9ed7-bc6a9f327966",
+   "metadata": {},
+   "source": [
+    "# RAG Orchestration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "0c8b6dfe-37be-4e8d-88cc-9f690cf7f09f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI(\n",
+    "    model=\"gpt-4o\",\n",
+    "    temperature=0,\n",
+    "    max_tokens=None,\n",
+    "    timeout=None,\n",
+    "    max_retries=2,\n",
+    ")\n",
+    "\n",
+    "embedding_model = SentenceTransformer(\"all-mpnet-base-v2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "dd5550e4-a9f3-447d-90a6-8f362b4fb65b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rag = SemanticSearchRAG(\n",
+    "    llm=llm,\n",
+    "    ss_embedding_model=embedding_model,\n",
+    "    template=ChatPromptTemplate.from_messages(\n",
+    "            [\n",
+    "                (\n",
+    "                    \"system\",\n",
+    "                    \"\"\"\n",
+    "                    You're a course teaching assistant. Answer the QUESTION based on the CONTEXT from the FAQ database.\n",
+    "                    Use only the facts from the CONTEXT when answering the QUESTION.\n",
+    "                    CONTEXT: \n",
+    "                    {context}\n",
+    "                    \"\"\",\n",
+    "                ),\n",
+    "                (\"human\", \"{question}\"),\n",
+    "            ]\n",
+    "        )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "810d0901-a5c0-4558-9f26-f7ee6169fa2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The course will cover tools such as Mage AI, Terraform, and Git. Additionally, you will need to set up a Google Cloud account, Google Cloud SDK, and Python 3 (installed with Anaconda) before the course starts.'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "QUESTION = \"What are the tools that I learn in this course?\"\n",
+    "rag.query(question=QUESTION)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc0e1954-38cf-4437-88fa-efd72f6f0f06",
+   "id": "a6f529e4-cd7e-4f52-bebc-321371034882",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7774ee46-77be-47ce-87aa-bb2ceedd61c6",
    "metadata": {},
    "outputs": [],
    "source": []
