--- a/module1/semantic_search.ipynb
+++ b/module1/semantic_search.ipynb
@@ -91,7 +91,7 @@
    "id": "658199f1-def0-4c98-9c05-0e9138316c07",
    "metadata": {},
    "source": [
-    "# 1. JSON Web data loader"
+    "# 2. JSON Web data loader"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "id": "eab94fc3-0458-490d-801d-52f5904b996b",
    "metadata": {},
    "source": [
-    "# Index documents in Elastic Search"
+    "# 3. Index documents in Elastic Search"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "id": "2312159e-2056-409d-b777-f0527375c1c9",
    "metadata": {},
    "source": [
-    "# Query Test"
+    "## 3.1 Query Test"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "id": "aabee10c-23e5-493a-9bee-d8ee2efb7f06",
    "metadata": {},
    "source": [
-    "# RAG"
+    "# 4. RAG"
    ]
   },
   {
@@ -422,7 +422,7 @@
    "id": "e82ecaee-b3c4-4098-9ed7-bc6a9f327966",
    "metadata": {},
    "source": [
-    "# RAG Orchestration"
+    "# 5. RAG Orchestration"
    ]
   },
   {
